--- a/mainPage.html
+++ b/mainPage.html
@@ -20,20 +20,13 @@
 
 </head>
 <body>
-<nav class="navbar navbar-light navbar-fixed-top" role="navigation">
+<!--nav begin-->
+<nav class="navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
-        <!--brand and toggle get grouped for better mobile display-->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#CustomerView-navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
             <a class="navbar-brand" href="#">Carpool Windsor</a>
         </div>
-        <!--nav links-->
-        <div class="collapse navbar-collapse " id="CustomerView-navbar-collapse">
+        <div  id="CustomerView-navbar">
             <ul class="nav navbar-nav">
                 <li>
                     <a class="nav_item" href="#">About us</a>
@@ -48,19 +41,21 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"  data-toggle="modal" data-target="#loginModal">Login</a ></li>
-                <li><a href="#"  data-toggle="modal" data-target="#signUpModal">Sign Up</a ></li>
+                <li><a id="signIn"  data-toggle="modal" data-target="#logInModal"><span class="glyphicon glyphicon-user"></span> Login</a ></li>
+                <li><a id="signUp"  data-toggle="modal" data-target="#signUpModal"><span class="glyphicon glyphicon-log-in"></span> Sign Up</a ></li>
             </ul>
         </div>
-        <!--nav end-->
     </div>
 </nav>
+
+<!--nav end-->
+
 <div class="homepage-hero-module">
     <div class="video-container">
         <div class="filter"></div>
         <video autoplay loop class="fillWidth">
-            <source src="./Going-Places/Mp4/Going-Places.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-            <source src="./Going-Places/Webm/Going-Places.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+            <source src="./Going-Places/Mp4/Going-Places.mp4" type="video/mp4" />
+            <source src="./Going-Places/Webm/Going-Places.webm" type="video/webm" />
         </video>
         <div class="poster hidden">
             <img src="./Going-Places/Snapshots/Going-Places.jpg" alt="">
@@ -128,7 +123,7 @@
 </div>
 <!-- /.modal -->
 
-<div class="modal fade" id="loginModal">
+<div class="modal fade" id="logInModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -172,37 +167,5 @@
 <script src="bower_components/jquery.validate.min.js"></script>
 <script src="bower_components/additional-methods.min.js"></script>
 
-<script>
-
-
-//    $(document).ready(function()
-//    {
-//        var info_pswFlag=0;
-//        var info_pswAFlag=0;
-//
-//
-//
-//        $("#usrPSWSignUp").focus(function()
-//        {
-//            if($(this).val().length!=0)
-//            {
-//                info_pswFlag=1;
-//
-//            }
-//        });
-//        $("#usrConfirmPSW").focus(function()
-//        {
-//            if($(this).val().length!=0)
-//            {
-//                info_pswAFlag=1;
-//
-//            }
-//        });
-//        if(info_pswFlag&&info_pswAFlag){
-//            if()
-//        }
-//
-//    });
-</script>
 </body>
 </html>
