--- a/searchPage.html
+++ b/searchPage.html
@@ -49,14 +49,32 @@
     </div>
 </nav>
 
-<ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#travelInfo">Travel Info</a></li>
-    <li><a data-toggle="tab" href="#collectionInfo">Collected Info</a></li>
-    <li><a data-toggle="tab" href="#postedInfo">Posted Info</a></li>
+<ul class="nav nav-pills nav-pills-position">
+    <li class="active"><a data-toggle="tab" href="#travelInfo">Your Travel</a></li>
+    <li><a data-toggle="tab" href="#collectionInfo">Your Collected</a></li>
+    <li><a data-toggle="tab" href="#postedInfo">Your Posted</a></li>
 </ul>
-<br>
+
 <div class="tab-content">
-    <div id="travelInfo" class="container tab-pane fade in active">
+    <div id="travelInfo" class=" tab-pane fade in active">
+        <!--<div class="tabExtraBox">-->
+
+        <!--</div>-->
+        <div class="row infoLabel">
+            <a class="col-lg-2"></a>
+            <div class="col-lg-8">
+                <div class="basicInfo">
+                    <span class="dest">windsor<span> to </span>toronto </span>
+                    <span class="de_time">departure time:</span>
+                </div>
+                <h3>driver name</h3>
+                <p>car make:</p>
+                <p>driver license type:</p>
+                <p>arrival time:</p>
+            </div>
+            <a class="col-lg-2"></a>
+        </div>
+
         <div class="row">
             <a class="col-lg-2"></a>
 
@@ -75,22 +93,47 @@
 
         <div class="row">
             <a class="col-lg-2"></a>
+
             <div class="col-lg-8">
+                <div class="basicInfo">
+                    <span class="dest">windsor<span> to </span>toronto </span>
+                    <span class="de_time">departure time:</span>
+                </div>
                 <h3>driver name</h3>
-                <h4><span>from</span>windsor<span>to</span>toronto</h4>
                 <p>car make:</p>
                 <p>driver license type:</p>
-                <p>departure time:</p>
                 <p>arrival time:</p>
             </div>
             <a class="col-lg-2"></a>
         </div>
-    </div>
-    <div id="collectionInfo" class="container tab-pane fade in active">
+
+        <div class="row">
+            <a class="col-lg-2"></a>
+
+            <div class="col-lg-8">
+                <div class="basicInfo">
+                    <span class="dest">windsor<span> to </span>toronto </span>
+                    <span class="de_time">departure time:</span>
+                </div>
+                <h3>driver name</h3>
+                <p>car make:</p>
+                <p>driver license type:</p>
+                <p>arrival time:</p>
+            </div>
+            <a class="col-lg-2"></a>
+        </div>
+
+
+    <div id="collectionInfo" class="tab-pane fade in active">
+        <!--<div class="tabBox">-->
+
+        <!--</div>-->
 
     </div>
-    <div id="postedInfo" class="container tab-pane fade in active">
+    <div id="postedInfo" class="tab-pane fade in active">
+        <!--<div class="tabBox">-->
 
+        <!--</div>-->
     </div>
 
 
