--- a/mainPage.html
+++ b/mainPage.html
@@ -5,19 +5,12 @@
     <meta http-equiv="x-ua-compatible" content="IE-edge">
     <meta name="viewpoint" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
-    <title>CarPool Windsor</title>
-    <!--Bootstrap Core CSS-->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <!--<link rel="stylesheet" href="bower_components/reset-css/reset.css">-->
-    <!--Custom CSS-->
+    <meta name="lize" content="">
+    <title>CarPoolWindsorMainPage</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/Carpool.css" type= text/css>
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'  type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'  type='text/css'>
-<!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and meadia queries-->
-    <!--[if 1t IE 9]-->
-    <script src="bower_components/html5shiv/dist/html5shiv.min.js"></script>
-    <script src="bower_components/respond/dest/respond.min.js"></script>
 
 </head>
 <body>
@@ -166,18 +159,17 @@
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-primary">Submit</button>
             </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
+        </div>
+    </div>
 </div>
-<!-- /.modal -->
 
 
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
-<script src="js/projectjs.js"></script>
-<script src="bower_components/jquery.validate.min.js"></script>
-<script src="bower_components/additional-methods.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="js/mainPage.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.1/jquery.validate.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.1/additional-methods.min.js"></script>
 
 </body>
 </html>
