--- a/searchPage.html
+++ b/searchPage.html
@@ -5,26 +5,14 @@
     <meta http-equiv="x-ua-compatible" content="IE-edge">
     <meta name="viewpoint" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
-    <title>CarPool Test</title>
-    <!--Bootstrap Core CSS-->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <!--<link rel="stylesheet" href="bower_components/reset-css/reset.css">-->
-    <!--Custom CSS-->
+    <meta name="lize" content="">
+    <title>searchPage</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/Carpool.css" type= text/css>
-    <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and meadia queries-->
-    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'  type='text/css'>
-    <!--[if 1t IE 9]-->
-    <script src="bower_components/html5shiv/dist/html5shiv.min.js"></script>
-    <script src="bower_components/respond/dest/respond.min.js"></script>
-    <!--[endif]-->
     <style>
         body{
-            padding-top: 50px;
             height: 100%;
-
         }
-
     </style>
 </head>
 <body data-ng-app ='infoMatch' ng-controller="searchController" >
@@ -54,9 +42,9 @@
 
 <div class="navBox" style="display: block;position: relative;">
     <ul class="nav nav-pills nav-justified ">
-        <li id="one" class="active"><a data-toggle="tab" href="#travelInfo"><span >Your Travel</span></a></li>
-        <li id="two"><a data-toggle="tab" href="#collectedInfo"><span>Your Collected</span></a></li>
-        <li id="three"><a data-toggle="tab" href="#postedInfo"><span>Your Posted</span></a></li>
+        <li id="one" class="active"><a data-toggle="tab" href="#travelInfo"><span >My Travel</span></a></li>
+        <li id="two"><a data-toggle="tab" href="#collectedInfo"><span>My Collected</span></a></li>
+        <li id="three"><a data-toggle="tab" href="#postedInfo"><span>My Posted</span></a></li>
     </ul>
 
     <div class="tabExtBox">
@@ -70,7 +58,7 @@
                 <div class="col-md-4">
                         <input type="text" ng-model="search.arrival" class="form-control" placeholder="Arrival...">
                 </div>
-                <a class="col-md-2"></a>
+                <a class="col-md-2"><button class="form-control" data-toggle="modal" data-target="#postRequestModal">Post my request</button></a>
 
             </div>
 
@@ -81,32 +69,47 @@
 
 <div class="tab-content" style="position: relative; display: block;">
     <div id="travelInfo" class=" tab-pane fade in active container" >
-        <div class="row infoLabel media" ng-repeat="driver in drivers | filter:search"  >
-            <!--<a class="col-md-2"></a>-->
+        <div class="row infoLabel media" ng-repeat="driver in drivers | filter:search" >
             <div class="col-md-7 basicInfo" style="float: none;">
-
                     <a class="media-left">
                         <img class="media-object" src="bower_components/source/XBOX%20360.ico" alt="Generic placeholder image">
                     </a>
                     <div class="media-body">
                         <span class="fromTo"><span class="route">{{driver.departure}}</span> to <span class="route">{{driver.arrival}} </span></span>
-                        <span ng:click="selected.value=$index"><span class="glyphicon glyphicon-heart" ng-class="currentColor:selected.value==$index"></span></span>
+                        <span ng-click="driver.isCollected=changeCollect(driver.isCollected)" ng-style="collectState(driver.isCollected)" class="glyphicon glyphicon-heart" ></span>
                         <span class="time">Departure Time:{{driver.depTime}}</span>
                         <span class="name">Driver Name:{{driver.name}}</span>
-                        <!--<span class="license">License Type:{{driver.driverLicense}}</span>-->
                         <span class="make">Car Make:{{driver.carMake}}</span>
                         <button class="btn-success" style="float: right">detail</button>
 
                     </div>
 
             </div>
-            <!--<a class="col-md-2"></a>-->
         </div>
+
     </div>
 
 
 
-    <div id="collectedInfo" class="tab-pane fade in active">
+    <div id="collectedInfo" class="tab-pane fade in active container">
+
+        <div class="row infoLabel media" ng-repeat="driver in drivers" ng-if="driver.isCollected==true"  >
+            <div class="col-md-7 basicInfo" style="float: none;">
+                <a class="media-left">
+                    <img class="media-object" src="bower_components/source/XBOX%20360.ico" alt="Generic placeholder image">
+                </a>
+                <div class="media-body">
+                    <span class="fromTo"><span class="route">{{driver.departure}}</span> to <span class="route">{{driver.arrival}} </span></span>
+                    <span ng-click="driver.isCollected=changeCollect(driver.isCollected)" ng-style="collectState(driver.isCollected)" class="glyphicon glyphicon-heart" ></span>
+                    <span class="time">Departure Time:{{driver.depTime}}</span>
+                    <span class="name">Driver Name:{{driver.name}}</span>
+                    <span class="make">Car Make:{{driver.carMake}}</span>
+                    <button class="btn-success" style="float: right">detail</button>
+
+                </div>
+
+            </div>
+        </div>
 
     </div>
 
@@ -114,30 +117,97 @@
 
     </div>
 
+        <div class="collectedInfoBox">
+            <span class="collectedInfo"></span>
+        </div>
 
 </div>
 
+<div class="modal fade" id="postRequestModal" role="dialog">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Please post your request</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row" >
+                    <a class="col-md-2"></a>
+                    <div class="col-md-4">
+                        <input type="text" ng-model="search.departure" class="form-control" placeholder="Departure...">
+                    </div>
 
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="bower_components/angular.min.js"></script>
+                    <div class="col-md-4">
+                        <input type="text" ng-model="search.arrival" class="form-control" placeholder="Arrival...">
+                    </div>
+                    <a class="col-md-2"></a>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                    <input type="datetime" placeholder="DepartureTime...">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-default">post it</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 <script src="js/searchPage.js"></script>
 
 <script>
     angular.module('infoMatch', []).controller('searchController', function($scope) {
 
+        $scope.flag=0;
         $scope.drivers=[
-//            {id:1,departure:'toronto',arrival:'windsor',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am'},
-//            {id:2,departure:'windsor',arrival:'toronto',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am'},
-            {id:3,departure:'windsor',arrival:'kingston',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am'},
-//            {id:4,departure:'windsor',arrival:'waterloo',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am'},
-//            {id:5,departure:'windsor',arrival:'london',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am'},
-//            {id:6,departure:'london',arrival:'windsor',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am'},
-//            {id:7,departure:'windsor',arrival:'ottawa',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am'},
-//            {id:8,departure:'toronto',arrival:'ottawa',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am'}
+            {id:1,departure:'toronto',arrival:'windsor',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am',isCollected:false},
+            {id:2,departure:'windsor',arrival:'toronto',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am',isCollected:false},
+            {id:3,departure:'windsor',arrival:'kingston',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am',isCollected:true},
+            {id:4,departure:'windsor',arrival:'waterloo',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am',isCollected:false},
+            {id:5,departure:'windsor',arrival:'london',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am',isCollected:false},
+            {id:6,departure:'london',arrival:'windsor',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am',isCollected:false},
+            {id:7,departure:'windsor',arrival:'ottawa',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am',isCollected:false},
+            {id:8,departure:'toronto',arrival:'ottawa',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am',isCollected:false}
 
         ];
-//
+
+
+        $scope.collectState=function (state) {
+
+            if(state){
+                return {'color':'red'}
+            }else{
+                return {'color':'gainsboro'}
+            }
+        };
+        $scope.changeCollect=function (state) {
+
+            if(state){
+                $('.collectedInfoBox').fadeIn();
+                $('.collectedInfo').html('Your collected has been removed');
+                setTimeout(function () {
+                    $('.collectedInfoBox').fadeOut();
+                },2000);
+
+                return false
+            }else{
+                $('.collectedInfoBox').fadeIn();
+                $('.collectedInfo').html('Your collected has been added');
+                setTimeout(function () {
+                    $('.collectedInfoBox').fadeOut();
+                },2000);
+                return true
+            }
+        };
+
     });
 </script>
 </body>
