--- a/searchPage.html
+++ b/searchPage.html
@@ -8,6 +8,8 @@
     <meta name="lize" content="">
     <title>searchPage</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/css/bootstrap-timepicker.min.css" type="text/css">
     <link rel="stylesheet" href="css/Carpool.css" type= text/css>
     <style>
         body{
@@ -115,44 +117,69 @@
 
     <div id="postedInfo" class="tab-pane fade in active">
 
+        <div class="row infoLabel media" ng-repeat="passenger in passengers" >
+            <div class="col-md-7 basicInfo" style="float: none;">
+                <a class="media-left">
+                    <img class="media-object" src="bower_components/source/XBOX%20360.ico" alt="Generic placeholder image">
+                </a>
+                <div class="media-body">
+                    <span class="fromTo"><span class="route">{{passenger.departure}}</span> to <span class="route">{{passenger.arrival}} </span></span>
+                    <span class="time">Departure Time:{{passenger.depTime}}</span>
+
+                </div>
+
+            </div>
+        </div>
+
     </div>
 
-        <div class="collectedInfoBox">
-            <span class="collectedInfo"></span>
-        </div>
+    <div class="collectedInfoBox">
+        <span class="collectedInfo"></span>
+    </div>
 
 </div>
 
 <div class="modal fade" id="postRequestModal" role="dialog">
     <div class="modal-dialog modal-lg">
+       <form>
         <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Please post your request</h4>
-            </div>
-            <div class="modal-body">
-                <div class="row" >
-                    <a class="col-md-2"></a>
-                    <div class="col-md-4">
-                        <input type="text" ng-model="search.departure" class="form-control" placeholder="Departure...">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Please post your request</h4>
+                </div>
+                <div class="modal-body form-group">
+                    <div class="row" >
+                        <a class="col-md-2"></a>
+                        <div class="col-md-4">
+                            <label>Departure Time</label>
+                            <input type="text" class="form-control" name="departureInput" placeholder="Departure...">
+                        </div>
+
+                        <div class="col-md-4">
+                        <label>Arrival Time</label>
+                        <input type="text"  class="form-control" name="arrivalInput" placeholder="Arrival...">
+                        </div>
                     </div>
 
-                    <div class="col-md-4">
-                        <input type="text" ng-model="search.arrival" class="form-control" placeholder="Arrival...">
+
+                    <div class="row">
+                        <div class=" col-md-4 col-md-offset-2">
+                            <label>Date</label>
+                            <input class="form-control"  id="date" name="date" placeholder="MM/DD/YYY" type="text"/>
+                        </div>
+                        <div class="col-md-4">
+                            <label>Estimated Time</label>
+                            <input class="form-control"  id="time" name="time" placeholder="HH/MM" type="text"/>
+                        </div>
                     </div>
-                    <a class="col-md-2"></a>
                 </div>
-                <div class="row">
-                    <div class="col-md-8">
-                    <input type="datetime" placeholder="DepartureTime...">
-                    </div>
+
+                <div class="modal-footer form-group">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="submit" name="submitRequest" class="btn btn-default">post it</button>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn btn-default">post it</button>
-            </div>
         </div>
+       </form>
     </div>
 </div>
 
@@ -161,12 +188,13 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/js/bootstrap-timepicker.min.js"></script>
 <script src="js/searchPage.js"></script>
 
 <script>
     angular.module('infoMatch', []).controller('searchController', function($scope) {
 
-        $scope.flag=0;
         $scope.drivers=[
             {id:1,departure:'toronto',arrival:'windsor',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am',isCollected:false},
             {id:2,departure:'windsor',arrival:'toronto',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am',isCollected:false},
@@ -178,6 +206,18 @@
             {id:8,departure:'toronto',arrival:'ottawa',name:'lize',carMake:'toyota',driverLicense:'G2',depTime:'10:00am',isCollected:false}
 
         ];
+        $scope.passengers=[
+//            {id:1,departure:'',arrival:'',depTime:''}
+        ];
+        $('button[name="submitRequest"]').click(function () {
+            var passenger= new Object();
+            passenger.departure=$('input[name="departureInput"]').val();
+            passenger.arrival=$('input[name="arrivalInput"]').val();
+            passenger.depTime=$('input[name="date"]').val();
+
+            $scope.passengers.push(passenger)
+
+        });
 
 
         $scope.collectState=function (state) {
@@ -208,7 +248,9 @@
             }
         };
 
+
     });
+
 </script>
 </body>
 </html>
